Fix index page heading for text align.

--- a/src/components/stylesheets/index.css
+++ b/src/components/stylesheets/index.css
@@ -59,6 +59,7 @@ main {
 
   .greeting {
     font-size: 40px;
+    text-align: initial;
   }
 
   .content-container {
